--- a/Alcheringa/static/CSS/newpost.css
+++ b/Alcheringa/static/CSS/newpost.css
@@ -99,3 +99,9 @@ body
     text-decoration: none;
     color: black;
 }
+.login
+{ 
+  color: #ff7b00;
+  border: 2px solid #ff7b00;
+  background-color: white;
+}
