Done with the project

--- a/Alcheringa/AlcherWeb/templates/AlcherWeb/base.html
+++ b/Alcheringa/AlcherWeb/templates/AlcherWeb/base.html
@@ -33,7 +33,7 @@
 
       <nav class="">
         <div class="d-flex justify-content-between">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'AlcherWeb-home' %}">
           <img src="https://media.giphy.com/avatars/alcheringa/R4opi9IQOgHt.png" width="30" height="30" class="d-inline-block align-top" alt="">
           Alcheringa <span class="orcol">Connect</span> </h3>
         </a>
