--- a/Alcheringa/AlcherWeb/templates/AlcherWeb/myposts.html
+++ b/Alcheringa/AlcherWeb/templates/AlcherWeb/myposts.html
@@ -8,28 +8,33 @@
       <h4>My posts</h4>
     </div>
     <div class="col">
-      <span class="aer"><a class="anc" href=""> <img src="{% static 'images/leftarrow.png' %}" height="10px"
-            width="10px" alt=""> Go back</a></span>
+      <span class="aer"><a class="anc" href="{% url 'profile' %}"> <img src="{% static 'images/leftarrow.png' %}" height="10px"
+            width="10px" alt="">To My Profile</a></span>
     </div>
   </div>
 
 
   <div class="row">
-    {% for post in posts1 %}
-
-
+    {% for post in posts%}
     <div class="col-6 col-md-4">
-      <div class="card" style="width: 18rem;">
-        <img src="{% static 'images/cn_bg.jpg' %}" class="card-img-top" alt="...">
+      <div class="card" style="width: 18rem; border: solid 1px; border-color: #fc8c03;">
+          <div class="card-title">
+            <div style="display:inline-flex; gap: 12px;">
+
+            <img style="border-radius: 50%;" src="{{ image.url }}" class="round-bord" width="25px"
+                        height="25px" alt="">
+              <h6 class="card-title"> {{post.author}}</h6>
+              
+            </div>
+          </div>
         <div class="card-body">
-          <p class="card-text"> <a href=""><img src="{% static 'images/thumbs_up.jpg' %}" height="25px" width="25px"
-                alt=""></a>
-            {{post.likes}} likes</p>
+          <img src="{{post.posted_pic.url}}" class="card-img-top" alt="">
+
+          <p class="card-text">{{post.content}}</p>
         </div>
-      </div>
+      
     </div>
-
-    {% endfor %}
+    
   </div>
-
+  {% endfor %}
   {% endblock content %}
